<resources>
    <string name="app_name">Greencar</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="open">Open</string>
    <string name="close">Close</string>


    <string name="prompt_password">Password</string>
    <string name="prompt_password_confirm">Confirm password</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="school_name">Enter your current school name</string>
    <string name="send_email">Send Email</string>
    <string name="reset_password">Reset Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_register">Register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>
    <string name="etBack"><![CDATA[<<Back]]></string>
    <string name="user_name">User Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="display_username">Username:</string>
    <string name="display_email">Email:</string>
    <string name="display_number">Number:</string>
    <string name="sample_name">Hung Daddi</string>


</resources>
